infrastructure/kubernetes/base/database-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: fluxion-database
    labels:
        app: fluxion-database
spec:
    type: ClusterIP
    ports:
        - port: 3306
          targetPort: 3306
          protocol: TCP
          name: mysql
    selector:
        app: fluxion-database
